# ProyectoFinalAlgoritmos

./: CMakeLists.txt  README.md  initialsetup.cpp  initialsetup.h  jsonutils.cpp  jsonutils.h  main.cpp  main.h  plans.cpp  plans.h  tickets.cpp  tickets.h  userplans.cpp  userplans.h  users.cpp  users.h
